--- a/src/app/feature/controls/index.scss
+++ b/src/app/feature/controls/index.scss
@@ -4,3 +4,4 @@
 @import 'photos-slider/photo-slider.component.scss';
 @import 'menu/menu-component.scss';
 @import 'back-to-top/back-to-top.component.scss';
+@import 'material.scss';
