--- a/src/app/feature/landing/components/landing/landing.component.html
+++ b/src/app/feature/landing/components/landing/landing.component.html
@@ -1,125 +1,5 @@
-<div class="top-block container background-container">
-    <div class="background">
-        <img src="assets/images/landing/main-background.png" />
-
-        <div id="made-in">
-            <div>
-                Made in Belarus
-            </div>
-        </div>
-    </div>
-    <div id="menu-selector">
-        <div>
-            <i class="icon-menu-container">
-                <div class="dash-group vertical">
-                    <my-repeater rows="3" rowClass="dash">
-                        <ng-template #item>
-                            <i class="icon-dash"></i>
-                        </ng-template>
-                    </my-repeater>
-                </div>
-            </i>
-        </div>
-    </div>
-    <div id="main-photo">
-        <div id="main-photo-bounds">
-            <div id="top-circle">
-                <div>
-                    <i class="icon-plug"></i>
-                </div>
-            </div>
-            <div style="position: relative; padding: 33.5%; margin-bottom: 67%;">
-                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 200%; background-image: url(assets/images/landing/main-photo.png); background-size: 100%; background-repeat: no-repeat;">
-                    <div id="photo-selector">
-                        <i id="photo-selector-icon" class="icon-photo-selector">
-                            <div class="dot-group vertical">
-                                <my-repeater rows="4" rowClass="dot">
-                                    <ng-template #item let-row="row" let-col="col">
-                                        <i [class.icon-circle]="row === 0" [class.icon-empty-circle]="row > 0"></i>
-                                    </ng-template>
-                                </my-repeater>
-                            </div>
-                        </i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="summary">
-        <div id="icon-sketching-ad">
-            <h1>
-                Sketching&nbsp;
-                <br />
-                made
-                <br />
-                Fast, Fun
-                <br />
-                and <span class="swag">Easy<span class="swag-background"></span></span>
-            </h1>
-        </div>
-        <section id="summary-text">
-            <div class="summary-element">
-                Planning mobile products is not always
-                digital: sometimes you may need pencil, paper and <span class="bold">a handy stencil</span> to speed up
-                your creative process.
-            </div>
-        </section>
-        <section id="actions-panel">
-            <div>
-                <div class="columns columns-2">
-                    <div class="column summary-element">
-                        <button class="button primary" (click)="orderStencil()">
-                            Order a stencil
-                        </button>
-                    </div>
-                    <div class="column summary-element">
-                        <button class="button">Lean More <i class="icon-arrow-edge"></i></button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="contacts-panel">
-            <div>
-                <div class="summary-element dot-group vertical vertical-dots">
-                    <my-repeater cols="3" rows="5" rowClass="dot-group">
-                        <ng-template #item>
-                            <i class="dot icon-circle"></i>
-                        </ng-template>
-                    </my-repeater>
-                </div>
-                <div class="contacts">
-                    <div class="contacts-list">
-                        <my-contact-link [contact]="contacts.instagram" [contactType]="ContactType.Instagram">
-                            <my-circle-icon iconClass="icon-instagram">
-                            </my-circle-icon>
-                        </my-contact-link>
-                        <my-contact-link [contact]="contacts.telegram" [contactType]="ContactType.Telegram">
-                            <my-circle-icon iconClass="icon-telegram">
-                            </my-circle-icon>
-                        </my-contact-link>
-                        <my-contact-link [contact]="contacts.mail" [contactType]="ContactType.Mail">
-                            <my-circle-icon iconClass="icon-google">
-                            </my-circle-icon>
-                        </my-contact-link>
-                    </div>
-                    <div class="dot-group vertical horizontal-dots">
-                        <my-repeater cols="6" rows="3" rowClass="dot-group">
-                            <ng-template #item>
-                                <i class="dot icon-circle"></i>
-                            </ng-template>
-                        </my-repeater>
-                    </div>
-                    <div>
-                    </div>
-                </div>
-                <div id="right-circle">
-                    <div>
-                        <i class="icon-empty-thin-circle"></i>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
+<div>
+    <my-top-block-widget [contacts]="contacts"></my-top-block-widget>
 </div>
 <div id="{{ LandingMenu.Advantages }}">
     <my-features-widget></my-features-widget>
