--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,14 @@
 $appBlack: #333333;
 $dotColor: $appBlack;
 $activeColor: $appBlack; 
+$appAzure: #60CFD8;
 
 $appGray: #9FA3A7;
 $swagBackground: #c9f3f5;
 $linkColor: #B4B4B4;
+$menuColor: $appAzure;
 
-$shareIconContainer: #60CFD8;
+$shareIconContainer: $appAzure;
 $calendarIconContainer: $swagBackground;
 
 $orderBackground: #3C3C3C;
