--- a/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
+++ b/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
@@ -1,6 +1,6 @@
 <div class="top-block container background-container">
     <div class="background">
-        <img src="assets/images/landing/main-background.png" />
+        <img src="assets/images/landing/main-background.jpg" />
 
         <div id="made-in">
             <div>
