Minimized top image.

--- a/src/app/feature/controls/index.scss
+++ b/src/app/feature/controls/index.scss
@@ -4,4 +4,5 @@
 @import 'photos-slider/photo-slider.component.scss';
 @import 'menu/menu-component.scss';
 @import 'back-to-top/back-to-top.component.scss';
+@import 'top-image-wrapper/top-image-wrapper.component.scss';
 @import 'material.scss';
