Changed gallery logic

--- a/src/app/feature/controls/photos-slider/photo-slider.component.html
+++ b/src/app/feature/controls/photos-slider/photo-slider.component.html
@@ -7,5 +7,5 @@
             <i class="icon-arrow"></i>
         </div>
     </div>
-    <img [src]="currentImage" />
+    <img [src]="currentImage.url" [alt]="currentImage.description" />
 </div>
