--- a/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
+++ b/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
@@ -1,4 +1,5 @@
 <svg class="top-image-wrapper" viewBox="0 0 679 923" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <title>{{ image.description }}</title>
     <path fill-rule="evenodd" clip-rule="evenodd" d="M189.447 -3C273.07 66.2148 355.436 121.862 415.5 131.5C550.424 153.15 654.26 378.962 672 510.091V574.459C670.236 582.299 667.585 588.732 664 593.5C658 627.833 627.5 760.3 471.5 883.5C328.073 996.771 101.383 837.515 -10 734.557V-3H189.447Z" fill="url(#pattern0)" />
     <g clip-path="url(#clip0)">
         <path d="M563.822 757.387C567.387 762.106 571.427 767.455 579.244 767.455C587.06 767.455 591.101 762.106 594.666 757.387C598.038 752.925 600.95 749.07 607.024 749.07C613.097 749.07 616.009 752.924 619.381 757.387C620.368 758.694 621.854 758.518 622.701 756.995C623.547 755.472 623.433 753.178 622.446 751.872C618.881 747.153 614.84 741.805 607.024 741.805C599.207 741.805 595.166 747.153 591.601 751.872C588.229 756.335 585.317 760.189 579.244 760.189C573.17 760.189 570.259 756.335 566.887 751.872C565.9 750.566 564.414 750.741 563.567 752.264C562.721 753.787 562.835 756.081 563.822 757.387Z" fill="black" />
@@ -19,6 +20,6 @@
         <clipPath id="clip1">
             <rect width="60.2682" height="93" fill="white" transform="translate(618.731 728)" />
         </clipPath>
-        <image id="image0" width="682" height="930" [attr.xlink:href]="imageUrl" />
+        <image id="image0" width="682" height="930" [attr.xlink:href]="image.url" />
     </defs>
 </svg>
