--- a/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
+++ b/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
@@ -26,7 +26,7 @@
             </div>
             <div style="position: relative; padding: 33.5%; margin-bottom: 67%;">
                 <div style="position: absolute; top: 0; left: 0; width: 100%; height: 200%;">
-                    <my-top-image-wrapper [imageUrl]="'assets/images/landing/main-photo.jpg'"></my-top-image-wrapper>
+                    <my-top-image-wrapper [image]="images[0]"></my-top-image-wrapper>
                     <div id="photo-selector">
                         <i id="photo-selector-icon" class="icon-photo-selector">
                             <div class="dot-group vertical">
