--- a/src/app/feature/controls/photos-slider/photo-slider.component.scss
+++ b/src/app/feature/controls/photos-slider/photo-slider.component.scss
@@ -15,8 +15,14 @@
         height: 3em;
         position: absolute;
         display: flex;
-        top: -0.1em;
-        left: -0.1em;
+        top: 0;
+        left: 0;
+        cursor: pointer;
+
+        &.bottom {
+            top: initial;
+            bottom: 0;
+        }
 
         .arrow {
             display: flex;
@@ -25,7 +31,6 @@
 
             width: 3em;
             height: 100%;
-            cursor: pointer;
 
             &.left {
                 transform: rotate(180deg);
