--- a/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
+++ b/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
@@ -1,4 +1,4 @@
-<svg class="top-image-wrapper" viewBox="0 0 679 923" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg *ngFor="let image of images" [style.display]="isActive(image) ? 'initial' : 'none'" class="top-image-wrapper" viewBox="0 0 679 923" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <title>{{ image.description }}</title>
     <path fill-rule="evenodd" clip-rule="evenodd" d="M189.447 -3C273.07 66.2148 355.436 121.862 415.5 131.5C550.424 153.15 654.26 378.962 672 510.091V574.459C670.236 582.299 667.585 588.732 664 593.5C658 627.833 627.5 760.3 471.5 883.5C328.073 996.771 101.383 837.515 -10 734.557V-3H189.447Z" fill="url(#pattern0)" />
     <g clip-path="url(#clip0)">
@@ -21,5 +21,6 @@
             <rect width="60.2682" height="93" fill="white" transform="translate(618.731 728)" />
         </clipPath>
         <image id="image0" width="682" height="930" [attr.xlink:href]="image.url" />
+        {{ image.url }}
     </defs>
 </svg>
