--- a/src/styles/common/headings.scss
+++ b/src/styles/common/headings.scss
@@ -18,7 +18,7 @@ h2 {
 }
 
 h5 {
-    font-family: "Montserrat";
+    font-family: "Montserrat", "Proxima Nova";
 }
 
 h1 {
@@ -36,7 +36,7 @@ h5 {
 h4 {
     font-size: 14px;
     font-weight: 500;
-    font-family: 'Montserrat';
+    font-family: "Montserrat", "Proxima Nova";
     color: $appGray;
     letter-spacing: 1px;
     text-transform: uppercase;
