--- a/src/styles/common/text.scss
+++ b/src/styles/common/text.scss
@@ -16,7 +16,7 @@
 }
 
 body {
-    font-family: "Open Sans", Monolith;
+    font-family: "Open Sans", sans-serif;
     font-weight: 400;
     color: black;
 }
