--- a/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
+++ b/src/app/feature/landing/components/top-block-widget/top-block-widget.component.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="background">
-        <img src="assets/images/landing/main-background.jpg" alt="Main Background" />
+        <img [src]="background.url" [alt]="background.description" />
 
         <div id="made-in">
             <div>
