--- a/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
+++ b/src/app/feature/controls/top-image-wrapper/top-image-wrapper.component.html
@@ -12,7 +12,7 @@
     <path d="M125 759.8V783.2" stroke="#383B41" stroke-width="6.5" stroke-linecap="round" />
     <defs>
         <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-            <use xlink:href="#image0" transform="translate(0 -0.00242267) scale(0.00146628 0.00108048)" />
+            <image width="682" height="930" [attr.xlink:href]="image.url" transform="translate(0 -0.00242267) scale(0.00146628 0.00108048)" />
         </pattern>
         <clipPath id="clip0">
             <rect width="60.2682" height="93" fill="white" transform="translate(563 728)" />
@@ -20,7 +20,5 @@
         <clipPath id="clip1">
             <rect width="60.2682" height="93" fill="white" transform="translate(618.731 728)" />
         </clipPath>
-        <image id="image0" width="682" height="930" [attr.xlink:href]="image.url" />
-        {{ image.url }}
     </defs>
 </svg>
