--- a/src/app/feature/landing/components/order-widget/order-widget.component.html
+++ b/src/app/feature/landing/components/order-widget/order-widget.component.html
@@ -1,6 +1,6 @@
 <div class="order-widget">
     <div class="order-stencil">
-        <img [src]="orderStencilImage.url" [alt]="orderStencilImage.description" />
+        <img [src]="orderStencilImage.url" [alt]="orderStencilImage.description" loading="lazy" />
     </div>
     <div id="{{ LandingMenu.Order }}" class="order-form-container">
         <div class="section">
