Removed draw-b4 mentions.

--- a/src/styles/fonts/index.scss
+++ b/src/styles/fonts/index.scss
@@ -1,2 +1,2 @@
-@import 'draw-b4.icons';
-@import 'draw-b4.icons.extensions.scss';
+@import 'ux-stencil.icons';
+@import 'ux-stencil.icons.extensions.scss';
