features was renamed to featers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 @import 'styles/common/index.scss';
 @import 'styles/layout.scss';
 @import 'styles/fonts/index.scss';
-@import 'app/feature/index.scss';
+@import 'app/features/index.scss';
