Fixed google issues.

--- a/src/app/features/controls/photos-slider/photo-slider.component.scss
+++ b/src/app/features/controls/photos-slider/photo-slider.component.scss
@@ -18,6 +18,8 @@
         top: 0;
         left: 0;
         cursor: pointer;
+        width: 100%;
+        justify-content: space-between;
 
         &.bottom {
             top: initial;
