--- a/src/app/features/landing/components/order-widget/order-widget.component.html
+++ b/src/app/features/landing/components/order-widget/order-widget.component.html
@@ -17,7 +17,7 @@
                 </span>
             </h2>
             <p class="description">
-                Please fill in this form and we will send you a Payoneer invoice  
+                Please fill in this form and we will contact you as soon as we get a new bunch of stencils.
             </p>
             <br />
         </div>
@@ -26,7 +26,7 @@
             </div>
             <div class="frame-column">
                 <ng-container *ngIf="inBrowser">
-                    <iframe title="Pre order UX Stencil form" class="google-form-frame" loading="lazy" src="https://docs.google.com/forms/d/e/1FAIpQLScAx9zgqjGgukrPsEh6ZwT2nuqHjooIJhK8ns6LS4uAd1RCSg/viewform?embedded=true&hl=en" (load)="formLoaded()" frameborder="0" marginheight="0" marginwidth="0">
+                    <iframe title="Pre order UX Stencil form" class="google-form-frame" loading="lazy" src="https://docs.google.com/forms/d/e/1FAIpQLSeIyRi8o68ROJtK6xB-1bq6taeiUGKKGfEHQ3yAYajVdVixOA/viewform?embedded=true&hl=en" (load)="formLoaded()" frameborder="0" marginheight="0" marginwidth="0">
                         Loading…
                     </iframe>
                 </ng-container>
