--- a/src/styles/fonts/ux-stencil.icons.css
+++ b/src/styles/fonts/ux-stencil.icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'ux-stencil';
-  src:  url('~/fonts/ux-stencil.eot?a8uv55');
-  src:  url('~/fonts/ux-stencil.eot?a8uv55#iefix') format('embedded-opentype'),
-    url('~/fonts/ux-stencil.ttf?a8uv55') format('truetype'),
-    url('~/fonts/ux-stencil.woff?a8uv55') format('woff'),
-    url('~/fonts/ux-stencil.svg?a8uv55#ux-stencil') format('svg');
+  src:  url('~/fonts/ux-stencil.eot?3xxa82');
+  src:  url('~/fonts/ux-stencil.eot?3xxa82#iefix') format('embedded-opentype'),
+    url('~/fonts/ux-stencil.ttf?3xxa82') format('truetype'),
+    url('~/fonts/ux-stencil.woff?3xxa82') format('woff'),
+    url('~/fonts/ux-stencil.svg?3xxa82#ux-stencil') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cart:before {
+  content: "\e94b";
+}
 .icon-curve-line:before {
   content: "\e949";
 }
