--- a/src/app/features/landing/components/top-block-widget/top-block-widget.component.scss
+++ b/src/app/features/landing/components/top-block-widget/top-block-widget.component.scss
@@ -1,7 +1,10 @@
 .mat-menu-content {
-    background-color: $menuColor !important;
-    a {
-        color: white;
+    .menu-wrapper {
+        background-color: $menuColor !important;
+
+        a {
+            color: white;
+        }
     }
 }
 
