--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,8 @@ $appGray: #9FA3A7;
 $swagBackground: #c9f3f5;
 $linkColor: #B4B4B4;
 $menuColor: $appAzure;
+$blockLineBreak: #DADADA;
+$gridBorderColor: #E8E9ED;
 
 $shareIconContainer: $appAzure;
 $calendarIconContainer: $swagBackground;
