--- a/src/app/features/purchase/components/cart/cart.component.html
+++ b/src/app/features/purchase/components/cart/cart.component.html
@@ -1,1 +1,45 @@
-Cart
+<div class="cart-component section">
+    <div class="page-name">
+        <h3>
+            Shopping Cart
+        </h3>
+    </div>
+    <div class="cart-grid">
+        <div class="grid-header">
+            <div class="column xl">
+                ITEMS
+            </div>
+            <div class="column m">
+                QUANTITY
+            </div>
+            <div class="column xs">
+            </div>
+        </div>
+        <div class="grid-content">
+            <ng-container *ngIf="cart$ | async as cart">
+                <div *ngFor="let item of cart.items; trackBy:trackCartItem" class="grid-row">
+                    <div class="column xl">
+                        <div class="item-card">
+                            <div class="item-image">
+                                <img [src]="item.image.url" [alt]="item.image.description" />
+                            </div>
+                            <div class="item-properties">
+                                <div class="item-name">
+                                    {{ item.name }}
+                                </div>
+                                <div class="item-price">
+                                    {{ item.cost | moneyPipe:item.currency }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column m">
+                        <my-numeric [value]="item.quantity" [min]="1" [max]="50" (valueChanged)="quantityChanged(cart, item, $event)"></my-numeric>
+                    </div>
+                    <div class="column xs">
+                    </div>
+                </div>
+            </ng-container>
+        </div>
+    </div>
+</div>
