--- a/src/styles/common/text.scss
+++ b/src/styles/common/text.scss
@@ -12,6 +12,11 @@
         width: 100%;
         height: 75%;
         z-index: -1;
+
+        &.over-text {
+            top: 0;
+            height: 100%;
+        }
     }
 }
 
@@ -29,11 +34,11 @@ body {
     color: $appGray;
 }
 
+.active {
+    color: black;
+}
+
 a {
     text-decoration: none;
     color: $linkColor;
-    
-    &.active {
-        color: black;
-    }
 }
