Initialized shipping page.

--- a/src/app/features/controls/inputs/numeric/numeric.component.html
+++ b/src/app/features/controls/inputs/numeric/numeric.component.html
@@ -1,4 +1,4 @@
-<span class="numeric-container input">
+<div class="numeric-container input">
     <span #minus class="minus act">
         <i class="icon-minus"> </i>
     </span>
@@ -6,4 +6,4 @@
     <span #plus class="plus act">
         <i class="icon-plus"></i>
     </span>
-</span>
+</div>
