--- a/src/app/features/purchase/components/purchase/purchase.component.scss
+++ b/src/app/features/purchase/components/purchase/purchase.component.scss
@@ -54,6 +54,8 @@ $topPanelHeight: 66px;
     }
 
     .content {
+        max-width: 560px;
+        
         h3 {
             padding: 1em 0;
         }
