--- a/src/app/features/controls/buttons/button.scss
+++ b/src/app/features/controls/buttons/button.scss
@@ -1,4 +1,4 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 
 .button {
     display: inline-block;
@@ -22,5 +22,10 @@
     &.primary {
         background-color: $activeColor;
         color: white;
+    }
+
+    &[disabled] {
+        opacity: 0.5;
+        cursor: not-allowed;
     }
 }
