--- a/src/app/features/controls/material.scss
+++ b/src/app/features/controls/material.scss
@@ -7,3 +7,6 @@ $candy-app-accent: mat-palette($mat-amber, A200, A100, A400);
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 
 @include mat-menu-theme($candy-app-theme);
+@include mat-form-field-theme($candy-app-theme);
+@include mat-checkbox-theme($candy-app-theme);
+@include cdk-text-field();
