--- a/src/app/features/purchase/components/shipping/shipping.component.html
+++ b/src/app/features/purchase/components/shipping/shipping.component.html
@@ -59,25 +59,71 @@
             </div>
         </ng-container>
     </div>
-    <form>
-        <div>
-            <h3>
-                Shipping address
-            </h3>
+    <form [formGroup]="form">
+        <div class="form-block">
+            <div>
+                <h3>
+                    Contact Information
+                </h3>
+            </div>
+            <div>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{ labels.fullName }}</mat-label>
+                    <input matInput name="fullName" type="text" formControlName="fullName" />
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{ labels.phoneNumber }}</mat-label>
+                    <input matInput name="phoneNumber" type="text" formControlName="phoneNumber" />
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{ labels.emailAddress }}</mat-label>
+                    <input matInput name="email" type="text" formControlName="emailAddress" />
+                </mat-form-field>
+            </div>
         </div>
-        <div>
-            [Shipping Fields]
+        <div class="form-block">
+            <div>
+                <h3>
+                    Shipping address
+                </h3>
+            </div>
+            <div>
+                <my-address-form namePrefix="shipping" [form]="form.controls.shippingAddress" [changed$]="changed$"></my-address-form>
+            </div>
         </div>
-        <div>
-            <h3>
-                Billing address
-            </h3>
+        <div class="form-block">
+            <div>
+                <h3>
+                    Billing address
+                </h3>
+            </div>
+            <div>
+                <div class="mat-form-field-wrapper">
+                    <mat-checkbox matInput formControlName="useShippingAsBilling">
+                        {{ labels.useShippingAsBilling }}
+                    </mat-checkbox>
+                </div>
+            </div>
+            <div *ngIf="form.controls.billingAddress.enabled">
+                <my-address-form namePrefix="billing" [form]="form.controls.billingAddress" [changed$]="changed$"></my-address-form>
+            </div>
         </div>
-        <div>
-            [Billing Fields]
+        <div class="form-block last">
+            <div>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{ labels.instagram }}</mat-label>
+                    <input matInput name="instagram" type="text" formControlName="instagram" />
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{ labels.comments }}</mat-label>
+                    <textarea matInput matTextareaAutosize rows="4" name="comments" type="text" formControlName="comments"></textarea>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="form-block last">
+            <div class="grid-actions">
+                <button type="submit" class="order-button button primary" (click)="confirmOrder()">Confirm Order</button>
+            </div>
         </div>
     </form>
-    <div class="grid-actions">
-        <button type="submit" class="order-button button primary">Confirm Order</button>
-    </div>
 </div>
