--- a/src/app/features/purchase/components/shipping/shipping.component.scss
+++ b/src/app/features/purchase/components/shipping/shipping.component.scss
@@ -6,4 +6,20 @@
             text-align: right;
         }
     }
+
+    form {
+        .form-block {
+            border-bottom: 1px solid $gridBorderColor;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+
+            &.last {
+                border-bottom: none;
+            }
+        }
+
+        .mat-form-field {
+            width: 100%;
+        }
+    }
 }
