--- a/src/app/features/controls/material.scss
+++ b/src/app/features/controls/material.scss
@@ -9,4 +9,5 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 @include mat-menu-theme($candy-app-theme);
 @include mat-form-field-theme($candy-app-theme);
 @include mat-checkbox-theme($candy-app-theme);
+@include mat-select-theme($candy-app-theme);
 @include cdk-text-field();
