Implemented login flow

--- a/src/app/features/controls/index.scss
+++ b/src/app/features/controls/index.scss
@@ -5,6 +5,7 @@
 @import 'menu/menu.component.scss';
 @import 'back-to-top/back-to-top.component.scss';
 @import 'top-image-wrapper/top-image-wrapper.component.scss';
+@import 'modal/modal.component.scss';
 
 @import 'inputs/index.scss';
 
