Added address management

--- a/src/app/features/controls/modal/modal.component.scss
+++ b/src/app/features/controls/modal/modal.component.scss
@@ -4,6 +4,7 @@
 
         .modal-title-wrapper {
             .modal-title {
+                padding-bottom: 20px;
             }
         }
         .modal-close {
