--- a/src/app/features/controls/material.scss
+++ b/src/app/features/controls/material.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/_theming.scss';
+@import "~@angular/material/_theming.scss";
 
 @include mat-core();
 
@@ -11,5 +11,6 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent);
 @include mat-checkbox-theme($candy-app-theme);
 @include mat-select-theme($candy-app-theme);
 @include mat-dialog-theme($candy-app-theme);
+@include mat-radio-theme($candy-app-theme);
 
 @include cdk-text-field();
