--- a/src/app/features/purchase/components/shipping/shipping.component.html
+++ b/src/app/features/purchase/components/shipping/shipping.component.html
@@ -88,7 +88,7 @@
                 </h3>
             </div>
             <div>
-                <my-address-form namePrefix="shipping" [form]="form.controls.shippingAddress" [changed$]="changed$"></my-address-form>
+                <my-address-selector formControlName="shippingAddress"> </my-address-selector>
             </div>
         </div>
         <div class="form-block">
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div *ngIf="form.controls.billingAddress.enabled">
-                <my-address-form namePrefix="billing" [form]="form.controls.billingAddress" [changed$]="changed$"></my-address-form>
+                <my-address-selector formControlName="billingAddress"> </my-address-selector>
             </div>
         </div>
         <div class="form-block last">
