Fixed bugs with address selection

--- a/src/app/features/address/components/address-modal/address-modal.component.html
+++ b/src/app/features/address/components/address-modal/address-modal.component.html
@@ -3,6 +3,6 @@
         {{ address?.addressId ? 'Edit' : 'Add'  }} Address
     </div>
     <div class="modal-content">
-        <my-address-form [value]="address" (valueChanged)="onAddressUpdated($event)" (cancelled)="onCancel()"></my-address-form>
+        <my-address-form [value]="address" [disabled]="disabled" (valueChanged)="onAddressUpdated($event)" (cancelled)="onCancel()"></my-address-form>
     </div>
 </my-modal>
