--- a/src/app/features/address/components/address-selector/address-selector.component.scss
+++ b/src/app/features/address/components/address-selector/address-selector.component.scss
@@ -18,3 +18,10 @@
         width: 50%;
     }
 }
+
+.ng-invalid.ng-touched {
+    .address-selector {
+        border: 2px solid #f44336;
+        border-radius: 5px;
+    }
+}
