--- a/src/app/features/address/components/address-form/address-form.component.html
+++ b/src/app/features/address/components/address-form/address-form.component.html
@@ -30,7 +30,7 @@
             <div>
                 <mat-form-field appearance="outline">
                     <mat-label>{{ labels.postalCode }}</mat-label>
-                    <input matInput type="text" formControlName="postalCode" />
+                    <input matInput type="text" name="zipCode" formControlName="postalCode" />
                 </mat-form-field>
             </div>
             <div>
