--- a/src/app/features/address/components/address-selector/address-selector.component.scss
+++ b/src/app/features/address/components/address-selector/address-selector.component.scss
@@ -1,22 +1,35 @@
 .address-selector {
-    .address-item {
-        padding-bottom: 10px;
-        position: relative;
+  position: relative;
 
-        .postal-code {
-            font-size: 0.75em;
-        }
+  .disabled-overlay {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: white;
+  }
 
-        .address-item-actions {
-            position: absolute;
-            top: 0;
-            right: 0;
-        }
-    }
-    .add-address {
-        padding-top: 15px;
-        width: 50%;
-    }
+  .address-item {
+      padding-bottom: 10px;
+      position: relative;
+
+      .postal-code {
+          font-size: 0.75em;
+      }
+
+      .address-item-actions {
+          position: absolute;
+          top: 0;
+          right: 0;
+      }
+  }
+  .add-address {
+      padding-top: 15px;
+      width: 50%;
+  }
 }
 
 .ng-invalid.ng-touched {
